refactor: 에이스 카드가 있는지 확인할 때 Card에게 메세지를 보내도록 수정